// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OAuth helpers should transform a Facebook profile 1`] = `
Object {
  "avatarUrl": "https://platform-lookaside.fbsbx.com/platform/profilepic/?asid=1234567890123456&height=50&width=50&ext=1234567894&hash=Qdiofewu-OPO",
  "defaultRole": "user",
  "displayName": "Bob Smith",
  "email": "bob.smith@gmail.com",
  "emailVerified": false,
  "locale": "en",
  "metadata": Object {},
  "passwordHash": null,
  "roles": Object {
    "data": Array [
      Object {
        "role": "me",
      },
      Object {
        "role": "user",
      },
    ],
  },
}
`;

exports[`OAuth helpers should transform a Google profile 1`] = `
Object {
  "avatarUrl": "https://lh3.googleusercontent.com/a/9en433u3nrkwpYEfHIOUJBD-C",
  "defaultRole": "user",
  "displayName": "Bob Smith",
  "email": "bob.smith@gmail.com",
  "emailVerified": true,
  "locale": "en",
  "metadata": Object {},
  "passwordHash": null,
  "roles": Object {
    "data": Array [
      Object {
        "role": "me",
      },
      Object {
        "role": "user",
      },
    ],
  },
}
`;

exports[`OAuth helpers should transform a WorkOS profile 1`] = `
Object {
  "avatarUrl": "https://lh3.googleusercontent.com/a/9en433u3nrkwpYEfHIOUJBD-C",
  "defaultRole": "user",
  "displayName": "Bob Smith",
  "email": "bob.smith@gmail.com",
  "emailVerified": false,
  "locale": "en",
  "metadata": Object {},
  "passwordHash": null,
  "roles": Object {
    "data": Array [
      Object {
        "role": "me",
      },
      Object {
        "role": "user",
      },
    ],
  },
}
`;
